fixes text wrapping in benefits blocks

--- a/wp-content/themes/classy/sass/pages/powetrains.scss
+++ b/wp-content/themes/classy/sass/pages/powetrains.scss
@@ -386,7 +386,7 @@
         .benefit {
 
           &__content {
-            padding: 50px 15px;
+            padding: 50px 30px;
           }
 
           &__text {
